fix spacing in article and vite config

--- a/src/Article/Article.module.css
+++ b/src/Article/Article.module.css
@@ -1,8 +1,11 @@
 .art {
+  margin: 0 auto;
   width: 100%;
   font-size: 18px;
-  line-height: 2;
+  line-height: 1.6;
   font-weight: 400;
+  width: 65ch;
+  text-align: justify;
 }
 
 .art pre {
@@ -30,4 +33,16 @@
   text-decoration-thickness: 2px;
   text-underline-offset: 6px;
   text-decoration-color: red;
+}
+
+.art p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
